add ms build and debug config file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,28 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(lldb) Launch",
-            "type": "cppdbg",
+            "name": "(msvc) Launch",
+            "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/main.out",
+            "program": "${workspaceFolder}/debug/main.exe",
             "args": [],
             "stopAtEntry": false,
-            // "preLaunchTask": "Build Debug",
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": true,
-            "MIMode": "lldb"
-        }
+        },
+        // {
+        //     "name": "(lldb) Launch",
+        //     "type": "cppdbg",
+        //     "request": "launch",
+        //     "program": "${workspaceFolder}/main.out",
+        //     "args": [],
+        //     "stopAtEntry": false,
+        //     // "preLaunchTask": "Build Debug",
+        //     "cwd": "${workspaceFolder}",
+        //     "environment": [],
+        //     "externalConsole": true,
+        //     "MIMode": "lldb"
+        // },
     ]
 }
