remove the debug file and update build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,7 +30,7 @@
                     "${file}"
                 ],
             },
-            "dependsOn": ["Debug Dir"],
+            "dependsOn": ["Clean", "Debug Dir"],
             "group": {                     
                 "kind": "build",
                 "isDefault": true
