--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,34 +4,54 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // {
+        //     "name": "CPP Launch OSX",
+        //     "type": "cppdbg",
+        //     "request": "launch",
+        //     // "osx": {
+        //         "program": "${workspaceFolder}/debug/main.out",
+        //         "args": [],
+        //         "stopAtEntry": false,
+        //         "cwd": "${workspaceFolder}",
+        //         "environment": [],
+        //         "externalConsole": true,
+        //         // "console": "none",
+        //         // "console": "internalConsole",
+        //         "MIMode": "lldb"
+        //     // }
+        // },
+        // {
+        //     "name": "CPP Launch Win",
+        //     "type": "cppvsdbg",
+        //     "request": "launch",
+        //     // "windows": {
+        //         "program": "${workspaceFolder}/debug/main.exe",
+        //         "args": [],
+        //         "stopAtEntry": false,
+        //         "cwd": "${workspaceFolder}",
+        //         "environment": [],
+        //         "externalConsole": true,
+        //     // },
+        // },
         {
-            "name": "CPP Launch OSX",
+            "name": "CPP Launch Win G++",
             "type": "cppdbg",
             "request": "launch",
-            // "osx": {
-                "program": "${workspaceFolder}/debug/main.out",
-                "args": [],
-                "stopAtEntry": false,
-                "cwd": "${workspaceFolder}",
-                "environment": [],
-                "externalConsole": true,
-                // "console": "none",
-                // "console": "internalConsole",
-                "MIMode": "lldb"
-            // }
-        },
-        {
-            "name": "CPP Launch Win",
-            "type": "cppvsdbg",
-            "request": "launch",
-            // "windows": {
-                "program": "${workspaceFolder}/debug/main.exe",
-                "args": [],
-                "stopAtEntry": false,
-                "cwd": "${workspaceFolder}",
-                "environment": [],
-                "externalConsole": true,
-            // },
+            "program": "${workspaceFolder}/debug/main.exe",
+            "args": [],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "miDebuggerPath": "D:\\run_win\\mingw\\mingw64\\bin\\gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         },
     ]
 }
