launch.json file has been changed by vs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
         //         "cwd": "${workspaceFolder}",
         //         "environment": [],
         //         "externalConsole": true,
-        //         // "console": "none",
+        //         // "console": "internalConsole",
         //         // "console": "internalConsole",
         //         "MIMode": "lldb"
         //     // }
